# xreader

./: Makefile.am  configure.ac  meson.build
backend/epub/: epub-document.c  epub-document.h  meson.build
backend/pdf/: ev-poppler.cc
cut-n-paste/: meson.build
cut-n-paste/gepub/: gepub-archive.c  gepub-doc.c  gepub-doc.h  gepub-text-chunk.c  gepub-utils.c  gepub-utils.h  gepub-widget.c  meson.build
data/: org.x.reader.gschema.xml
libdocument/: ev-annotation.c  ev-document-annotations.h  ev-mapping-list.c  ev-mapping-list.h  meson.build
libmisc/: Makefile.am  ev-page-action-widget.c  ev-page-action.h
libview/: ev-annotation-window.c  ev-web-view.c  meson.build
shell/: Makefile.am  ev-annotation-properties-dialog.h  ev-application.c  ev-history.h  ev-metadata.c  ev-preferences-dialog.c  ev-preferences-dialog.h  ev-properties-dialog.c  ev-properties-dialog.h  ev-properties-fonts.c  ev-properties-fonts.h  ev-properties-license.h  ev-properties-view.h  ev-sidebar-attachments.h  ev-sidebar-links.h  ev-sidebar-page.h  ev-sidebar.h  ev-toolbar.c  ev-toolbar.h  ev-utils.c  ev-window-title.h  ev-window.c  ev-window.h
